2024-02-05T08:18:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7781466207 # 88
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-05
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 854 1559 / 870 1590
* notice: next accum: outdated-unq outdated-all / unq all: 854 1559 / 871 1591
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-22 2024-02-05]

2024-02-04T16:17:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7775300446 # 86
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 853 1557 / 870 1589
* notice: next accum: outdated-unq outdated-all / unq all: 854 1559 / 870 1590
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-21] / [2024-02-04]

2024-02-04T08:17:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7772724986 # 85
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-04
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 853 1557 / 869 1588
* notice: next accum: outdated-unq outdated-all / unq all: 853 1557 / 870 1589
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-21 2024-02-04]

2024-02-03T16:18:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7768041648 # 83