@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-05T08:18:45Z",
-  "count_outdated" : 1559,
-  "uniques_outdated" : 854,
-  "count" : 1591,
+  "timestamp" : "2024-02-05T16:17:56Z",
+  "count_outdated" : 1561,
+  "uniques_outdated" : 855,
+  "count" : 1592,
   "uniques" : 871,
   "clones" : [
-    {
-      "timestamp": "2024-01-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-23T00:00:00Z",
       "count": 4,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
